@@ -7,7 +7,7 @@ PACKAGE=swish-e
 dnl version number
 MAJOR_VERSION=2
 MINOR_VERSION=4
-MICRO_VERSION=1
+MICRO_VERSION=2
 INTERFACE_AGE=0
 BINARY_AGE=0
 VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION
